nohup.out
  File "main.py", line 217
    os.path.join(args.exp, 'checkpoint_dc_'+str(epoch+1)'.pth.tar'))
                                                                 ^
SyntaxError: invalid syntax
